# test_world

./: .gitignore  .gitmodules  LICENSE  README.md  config.json
controllers/soccer_robot/: .gitignore  .soccer_robot.signature  Makefile  runtime.ini  soccer_robot  soccer_robot.cpp
controllers/supervisor/: .gitignore  .supervisor.exe.signature  .supervisor.signature  Makefile  client.py  constants.hpp  constants.py  game.cpp  game.hpp  image_buffer.cpp  image_buffer.hpp  player.py  runtime.ini  spsc_buffer.hpp  supervisor  supervisor.cpp  supervisor.hpp  supervisor.py  wamp_router.hpp
examples_new/: player_skeleton.py
examples_new/commentator_skeleton_py/: commentator.py  commentator_skeleton.py  participant_base.py  reporter.py  reporter_skeleton.py
examples_new/common/: game.hpp  participant.py  player.cpp  player.hpp
examples_new/player_random-walk/: .gitignore  CMakeLists.txt  player.cpp  player.hpp  player_random-walk.cpp
examples_new/player_random-walk_py/: player_random-walk.py
examples_new/player_random_walk_py/: player_random-walk.py
examples_new/player_rulebased-B_py/: helper.py  player_rulebased-B.py
examples_new/player_skeleton_py/: player_skeleton.py
examples_new/reporter_skeleton_py/: reporter.py  reporter_skeleton.py
protos/: .Referee.proto.signature  Referee.proto  TestReferee.proto
protos/colors/: .Black.proto.signature  .Blue.proto.signature  .DarkGray.proto.signature  .DarkGreen.proto.signature  (+26 more)
worlds/: .aiwc.wbt.signature  .aiwc_simple.wbt.signature  aiwc.wbt  aiwc_linux.wbt  aiwc_simple.wbt  aiwc_windows.wbt  config.json
(+74 files in other folders)
